# tritonkart

./: Dockerfile  README.md
tritonkart_bringup/: CMakeLists.txt  package.xml
tritonkart_bringup/launch/: tritonkart_logging.launch.py  tritonkart_mapping.launch.py  tritonkart_navigation.launch.py  tritonkart_navigation_real.launch.py  tritonkart_navigation_sim.launch.py
tritonkart_description/: CMakeLists.txt  package.xml
tritonkart_description/config/: kart.yaml
tritonkart_description/launch/: kart.launch.py
tritonkart_description/meshes/: rs-bpearl.stl
tritonkart_description/rviz/: kart.rviz
tritonkart_description/urdf/: kart.urdf
tritonkart_localization/: CMakeLists.txt  package.xml
tritonkart_localization/config/: gps_localization.yaml
tritonkart_localization/launch/: gps_localization.launch.py
tritonkart_logging/: CMakeLists.txt  package.xml  setup.cfg
tritonkart_logging/launch/: tritonkart_logging.launch.py
tritonkart_logging/scripts/: gps_logger.py
tritonkart_mapping/: CMakeLists.txt  package.xml
tritonkart_mapping/config/: mapping.yaml
tritonkart_mapping/launch/: ekf_node.launch.py  slam_mapping.launch.py
tritonkart_mapping/rviz/: mapping.rviz
tritonkart_navigation/: CMakeLists.txt  package.xml
tritonkart_navigation/config/: nav2_navigation.yaml  nav_bt.xml
tritonkart_navigation/launch/: client.launch.py  nav2.launch.py
tritonkart_navigation/scripts/: nav2_client.py
tritonkart_utilities/: CMakeLists.txt  package.xml
tritonkart_utilities/config/: utilities.yaml
tritonkart_utilities/launch/: start_utilities.launch.py  start_utilities_real.launch.py  start_utilities_sim.launch.py
tritonkart_utilities/scripts/: twist_to_ackermann.py  twist_to_vehiclecontroldata.py
